# jtt-proxy

./: CMakeLists.txt  CMakeLists.txt.user.8ef21dd  CMakeLists.txt.user.ac2afbd  CMakeLists.txt.user.cd3f2ca  README.md  mtp-808-proxy.service
cmake/: FindLibAV.cmake
config/: conf.json
dependencies/: deps.txt
doc/: .~lock.alarms_matching_table.ods#  808_requests  alarms_matching_table(eng).ods  alarms_matching_table.ods  events.json  integraciya-s-kitajskimi-regami-protokol-808.md  matching.txt  rtppacket  statusFlagDescription.txt  Договор_оказания_услуг_№ДУ_Т_2504_1_Леонов_Ю.doc  Договор_оказания_услуг_№ДУ_Т_2504_1_Леонов_Ю.odt  ЗАЯВКА №1_01.04.2025г.doc  Задачи  Описание_конфигурации  ТЗ Леонов.odt  вопросы.txt  описание_прокси_808.odt  отчет_2205.odt  приложение 1.md  реквизиты
doc/Полезные ссылки/: chest
doc/логика/: alarms_video_uploading.txt
jsonrpc/: DbMessagesHelper.cpp  DbMessagesHelper.h  DbMessagesHelperOld.cpp  DbMessagesHelperOld.h  EntityError.h  IDbMessagesHelper.h  files.cpp  files.h  main.cpp  tools.cpp  uuid.cpp  uuid.h
jt808/: jt1078mediatransmissionrequest.cpp  jt1078mediatransmissionrequest.h  jt1078streamtransmitrequest.cpp  jt1078streamtransmitrequest.cpp.autosave  jt1078streamtransmitrequest.h  jt1078uploadedresourceslistrequest.cpp  jt1078uploadedresourceslistrequest.h  jt808alarmattachmentrequest.cpp  jt808alarmattachmentrequest.h  jt808authenticationkeyfinder.cpp  jt808authenticationkeyfinder.h  jt808authenticationrequest.cpp  jt808authenticationrequest.h  jt808client.cpp  jt808client.h  jt808client.h.autosave  jt808fileuploadinforequest.cpp  jt808fileuploadinforequest.h  jt808fileuploadstoprequest.cpp  jt808fileuploadstoprequest.h  jt808generalresponserequest.cpp  jt808generalresponserequest.h  jt808header.h  jt808headerparser.cpp  jt808headerparser.h  jt808heartbeatrequest.cpp  jt808heartbeatrequest.h  jt808mediauploadeventinforequest.cpp  jt808mediauploadeventinforequest.h  jt808mediauploadrequest.cpp  jt808mediauploadrequest.h  jt808messageformatter.cpp  jt808messageformatter.h  jt808messagevalidator.cpp  jt808messagevalidator.h  jt808registrationrequest.cpp  jt808registrationrequest.h  jt808serializer.cpp  jt808serializer.cpp.autosave  jt808serializer.h  (+7 more)
logger/: logger.conf
mtp-808-proxy_release/config/: conf.json
src/: PlatformInfo.h  TerminalInfo.h  alarmfileuploader.cpp  alarmfileuploader.h  alarmtypes.h  alarmtypes.h.autosave  configuration.h  configurationparser.cpp  configurationparser.h  confmodificationwatcher.cpp  confmodificationwatcher.h  eventrequests.cpp  eventrequests.h  eventserverinfo.h  logger.h  main.cpp  main.cpp.autosave  mediatransmissionparams.h  module.cpp  module.h  platformalarmid.h  realtimevideostreamer.cpp  realtimevideostreamer.h  requestsmap.h  terminalparams.h  tools.cpp  tools.h  videoserverinfo.h
tests/: events.json  jt808requeststest.h  jt808serializertest.h  mediaupload.txt
vpn/: leonov.ovpn
websocket/: websocketclient.cpp  websocketclient.h  websocketserver.cpp  websocketserver.h
отчеты/: июль_25.txt
